test fix panel redirect

--- a/infopanel.html
+++ b/infopanel.html
@@ -15,26 +15,8 @@
 </head>
 
 <body>
-  <!-- Intro Screen -->
-  <div id="intro" class="intro-screen" role="dialog" aria-labelledby="intro-text" aria-modal="true">
-    <div class="intro-content">
-      <img src="faviconNRB1.png" alt="" class="intro-logo1" />
-      <img src="faviconNRB2.png" alt="" class="intro-logo2" />
-      <img src="faviconNRB3.png" alt="" class="intro-logo3" />
-      <div class="intro-body">
-        <h1 id="intro-text">Welcome to</h1>
-        <div class="text-container">
-          <span class="nrb-outline">Neutroxity</span>
-          <span class="nrb-gradient">
-            <span class="nrb-gradient-fill">Neutroxity</span>
-          </span>
-        </div>
-      </div>
-      <p class="sr-only" id="intro-desc">Intro screen will auto-close and reveal the site.</p>
-    </div>
-  </div>
   <!-- Header -->
-  <header class="main-header hidden" id="mainHeader" role="banner">
+  <header class="main-header" id="mainHeader" role="banner">
     <div class="logo-area" aria-hidden="false">
       <img class="logo" src="faviconNRB.png" alt="Neutroxity Logo">
       <h1>Neutroxity</h1>
@@ -49,7 +31,7 @@
       aria-label="Toggle responsive sidebar">☰</button>
   </header>
   <!-- Sidebar -->
-  <aside class="sidebar collapsed hidden" id="sidebar" role="navigation" aria-label="Main menu">
+  <aside class="sidebar collapsed " id="sidebar" role="navigation" aria-label="Main menu">
     <nav class="menu" id="mainMenu">
       <button data-target="panel-home" class="menu-btn active" aria-controls="panel-home">
         <i class="icon"><img src="iconHome.png" class="icon-img"></i><span>Home</span>
@@ -76,119 +58,9 @@
     <button id="toggleSidebar" class="toggle-btn" aria-label="Toggle sidebar">☰</button>
   </aside>
   <!-- App -->
-  <main id="app" class="hidden" role="main" tabindex="-1">
-
-    <!-- HOME -->
-    <section id="panel-home" class="panel visible-panel" aria-labelledby="homeTitle">
-      <div class="home-panel">
-        <div class="home-content">
-          <h1 id="homeTitle" class="home-title">Make Life Easier</h1>
-          <div id="homeText" class="home-text">Math and Science is more than calculations. Have fun with it.</div>
-          <div class="quick-links" role="toolbar" aria-label="Quick links">
-            <button class="front-btn" onclick="navTo('panel-games')">Open Games</button>
-            <button class="front-btn" onclick="navTo('panel-utilities')">Open Utilities</button>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- UTILITIES -->
-    <section id="panel-utilities" class="panel hidden" aria-labelledby="utilTitle">
-      <h2 id="utilTitle" class="title">Utilities</h2>
-
-      <!-- Unit Converter -->
-      <div class="card" role="region" aria-labelledby="unitConvertTitle">
-        <h3 id="unitConvertTitle">Unit Converter</h3>
-        <p class="muted">Converts units to another unit of its kind</p>
-        <div class="grid">
-          <label><span class="muted">Category</span>
-            <select id="unitCategory" onchange="updateUnits()">
-              <option value="length">Length</option>
-              <option value="mass">Mass</option>
-              <option value="area">Area</option>
-              <option value="volume">Volume</option>
-              <option value="angle">Angle</option>
-              <option value="temperature">Temperature</option>
-              <option value="energy">Energy</option>
-              <option value="speed">Speed</option>
-              <option value="time">Time</option>
-              <option value="power">Power</option>
-              <option value="pressure">Pressure</option>
-              <option value="frequency">Frequency</option>
-              <option value="fuelEconomy">Fuel Economy</option>
-              <option value="memory">Memory</option>
-              <option value="dataTransferUnits">Data Transfer Rate</option>
-            </select>
-          </label>
-          <label><span class="muted">Value</span>
-            <input id="unitVal" type="text" step="any" placeholder="Enter unit value" aria-label="unit input" />
-          </label>
-          <label><span class="muted">Convert From:</span>
-            <select id="fromUnit"></select>
-          </label>
-          <label><span class="muted">Convert To:</span>
-            <select id="toUnit"></select>
-          </label>
-        </div>
-        <div class="row">
-          <button class="btn" onclick="unitCompute()">Compute</button>
-          <button class="btn" onclick="unitClear()">Clear</button>
-        </div>
-        <div id="unitOut" class="output mono" role="status" aria-live="polite"></div>
-      </div>
-
-      <!-- Password Generator -->
-      <div class="card" role="region" aria-labelledby="passwordGeneratorTitle">
-        <h3 id="passwordGeneratorTitle">Password Generator</h3>
-        <p class="muted">Decide which characters to include and the length and a strong password will be given.</p>
-        <div class="dropdown" id="charactersDropdown">
-          <span class="muted">Allowed Character Types:</span>
-          <div class="dropdown-button" id="pwdCharacterTypesToggle" role="button" tabindex="0" aria-expanded="false">
-            Select Character Types
-          </div>
-          <div class="dropdown-content" id="pwdCharacterTypesContent" aria-hidden="true">
-            <label><input type="checkbox" id="pwdUpper" value="upper" class="characters" checked> Capital
-              Letters</label><br>
-            <label><input type="checkbox" id="pwdLower" value="lower" class="characters" checked> Lowercase
-              Letters</label><br>
-            <label><input type="checkbox" id="pwdSymbols" value="symbols" class="characters" checked>
-              Symbols</label><br>
-            <label><input type="checkbox" id="pwdNumbers" value="numbers" class="characters" checked> Numbers</label>
-          </div>
-          <div class="grid">
-            <label><span class="muted">Enter number of characters required</span>
-              <input id="pwdLength" type="text" step="any" placeholder="Length" aria-label="pw length input" />
-            </label>
-          </div>
-          <div class="row">
-            <button id="pwdGenerate" class="btn" onclick="passwordGenerate()">Generate</button>
-            <button id="pwdClear" class="btn" onclick="passwordClear()">Clear</button>
-            <button id="pwdCopy" class="btn" onclick="copyPassword()">Copy</button>
-          </div>
-          <div id="pwdOut" class="output mono" role="status" aria-live="polite"></div>
-        </div>
-      </div>
-
-      <!-- Week Day Calculator
-      <div class="card" role="region" aria-labelledby="dayCalculatorTitle">
-        <h3 id="dayCalculatorTitle">Week Day Calculator</h3>
-        <p class="muted">Calculate the week day for a given date.</p>
-        <div class="grid">
-          <label><span class="muted">Select Date:</span>
-            <input id="date" type="date" aria-label="start date" />
-          </label>
-        </div>
-        <div class="row">
-          <button class="btn" onclick="calculateWeekday()">Calculate</button>
-          <button class="btn" onclick="clearWeekday()">Clear</button>
-        </div>
-        <div id="dayOut" class="output mono" role="status" aria-live="polite"></div>
-      </div> -->
-
-    </section>
-
+  <main id="app" role="main" tabindex="-1">
     <!-- INFO -->
-    <section id="panel-info" class="panel hidden" aria-labelledby="infoTitle">
+    <section id="panel-info" class="panel" aria-labelledby="infoTitle">
       <h2 id="infoTitle" class="title">Info</h2>
 
       <!-- About -->
