--- a/chemistry/index.html
+++ b/chemistry/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1.0" />
   <title>Neutroxity - Chemistry</title>
-  <link rel="icon" href="faviconNRB.png" type="image/x-icon">
-  <link rel="icon" type="image/png" sizes="32x32" href="faviconNRB.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="faviconNRB.png">
-  <link rel="apple-touch-icon" href="faviconNRB.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="faviconNRB.png">
-  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="../faviconNRB.png" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="../faviconNRB.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../faviconNRB.png">
+  <link rel="apple-touch-icon" href="../faviconNRB.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="../faviconNRB.png">
+  <link rel="stylesheet" href="../style.css" />
   <meta name="author" content="Nived" />
 </head>
 
@@ -18,7 +18,7 @@
   <!-- Header -->
   <header class="main-header" id="mainHeader" role="banner">
     <div class="logo-area" aria-hidden="false">
-      <img class="logo" src="faviconNRB.png" alt="Neutroxity Logo">
+      <img class="logo" src="../faviconNRB.png" alt="Neutroxity Logo">
       <h1>Neutroxity</h1>
     </div>
 
@@ -34,25 +34,25 @@
   <aside class="sidebar collapsed" id="sidebar" role="navigation" aria-label="Main menu">
     <nav class="menu" id="mainMenu">
       <button data-target="panel-home" class="menu-btn" aria-controls="panel-home">
-        <i class="icon"><img src="iconHome.png" class="icon-img"></i><span>Home</span>
+        <i class="icon"><img src="../iconHome.png" class="icon-img"></i><span>Home</span>
       </button>
       <button data-target="panel-math" class="menu-btn" aria-controls="panel-math">
-        <i class="icon"><img src="iconMath.png" class="icon-img"></i><span>Math</span>
+        <i class="icon"><img src="../iconMath.png" class="icon-img"></i><span>Math</span>
       </button>
       <button data-target="panel-physics" class="menu-btn" aria-controls="panel-physics">
-        <i class="icon"><img src="iconPhysics.png" class="icon-img"></i><span>Physics</span>
+        <i class="icon"><img src="../iconPhysics.png" class="icon-img"></i><span>Physics</span>
       </button>
       <button data-target="panel-chemistry" class="menu-btn active" aria-controls="panel-chemistry">
-        <i class="icon"><img src="iconChemistry.png" class="icon-img"></i><span>Chemistry</span>
+        <i class="icon"><img src="../iconChemistry.png" class="icon-img"></i><span>Chemistry</span>
       </button>
       <button data-target="panel-games" class="menu-btn" aria-controls="panel-games">
-        <i class="icon"><img src="iconGames.png" class="icon-img"></i><span>Games</span>
+        <i class="icon"><img src="../iconGames.png" class="icon-img"></i><span>Games</span>
       </button>
       <button data-target="panel-utilities" class="menu-btn" aria-controls="panel-utilities">
-        <i class="icon"><img src="iconUtilities.png" class="icon-img"></i><span>Utilities</span>
+        <i class="icon"><img src="../iconUtilities.png" class="icon-img"></i><span>Utilities</span>
       </button>
       <button data-target="panel-info" class="menu-btn" aria-controls="panel-info">
-        <i class="icon"><img src="iconInfo.png" class="icon-img"></i><span>Info</span>
+        <i class="icon"><img src="../iconInfo.png" class="icon-img"></i><span>Info</span>
       </button>
     </nav>
     <button id="toggleSidebar" class="toggle-btn" aria-label="Toggle sidebar">☰</button>
@@ -1263,9 +1263,9 @@
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-check-compat.js"></script>
   <!-- Site scripts -->
-  <script src="eacddb.js"></script>
-  <script src="onstart.js"></script>
-  <script src="fbdb.js"></script>
+  <script src="../eacddb.js"></script>
+  <script src="../onstart.js"></script>
+  <script src="../fbdb.js"></script>
 
 </body>
 
