--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <!-- Intro Screen -->
   <div id="intro" class="intro-screen" role="dialog" aria-labelledby="intro-text" aria-modal="true">
     <div class="intro-content">
-      <img src="faviconNRB1.png" alt="" class="intro-logo1" />
-      <img src="faviconNRB2.png" alt="" class="intro-logo2" />
-      <img src="faviconNRB3.png" alt="" class="intro-logo3" />
+      <img src="https://neutroxity.tech/faviconNRB1.png" alt="" class="intro-logo1" />
+      <img src="https://neutroxity.tech/faviconNRB2.png" alt="" class="intro-logo2" />
+      <img src="https://neutroxity.tech/faviconNRB3.png" alt="" class="intro-logo3" />
       <div class="intro-body">
         <h1 id="intro-text">Welcome to</h1>
         <div class="text-container">
@@ -39,10 +39,10 @@
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-check-compat.js"></script>
   <!-- Site scripts -->
-  <script src="eacddb.js"></script>
-  <script src="onstart.js"></script>
-  <script src="nonfbdb.js"></script>
-  <script src="fbdb.js"></script>
+  <script src="https://neutroxity.tech/eacddb.js"></script>
+  <script src="https://neutroxity.tech/onstart.js"></script>
+  <script src="https://neutroxity.tech/nonfbdb.js"></script>
+  <script src="https://neutroxity.tech/fbdb.js"></script>
 
 </body>
 
